--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>com.biit.liferay</groupId>
 	<artifactId>authenticationClient</artifactId>
 	<packaging>jar</packaging>
-	<version>0.0.1.1</version>
+	<version>0.0.2</version>
 	<name>Liferay Authentication Client with Web Services</name>
 	<description>Obtain users, groups and roles information from liferay</description>
 
@@ -29,6 +29,14 @@
 			</plugin>
 		</plugins>
 	</build>
+
+	<distributionManagement>
+		<repository>
+			<id>central</id>
+			<name>biit-releases</name>
+			<url>http://ec2-54-217-214-241.eu-west-1.compute.amazonaws.com:8080/artifactory/ext-release-local</url>
+		</repository>
+	</distributionManagement>
 
 	<dependencies>
 		<dependency>
