--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 		<plugin.compiler.version>2.3.2</plugin.compiler.version>
 		<plugin.exec.version>1.2.1</plugin.exec.version>
 		<org.testng.version>6.8</org.testng.version>
-		<biit-fileutils.version>0.0.1</biit-fileutils.version>
+		<biit-common-utils.version>0.0.1</biit-common-utils.version>
 	</properties>
 
 	<build>
@@ -48,9 +48,9 @@
 		</dependency>
 		<!-- File access -->
 		<dependency>
-			<groupId>com.biit.utils</groupId>
-			<artifactId>fileutils</artifactId>
-			<version>${biit-fileutils.version}</version>
+			<groupId>com.biit</groupId>
+			<artifactId>common-utils</artifactId>
+			<version>${biit-common-utils.version}</version>
 		</dependency>
 		<!-- Axis WS access -->
 		<dependency>
