PBKDF2 added to adapt to Liferay 6.2

--- a/pom.xml
+++ b/pom.xml
@@ -76,5 +76,11 @@
 			<version>${org.testng.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- some services use this dependency -->
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4.7</version>
+		</dependency>
 	</dependencies>
 </project>
