--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 		<org.testng.version>6.8</org.testng.version>
 		<biit-common-utils.version>0.0.1</biit-common-utils.version>
 		<biit-liferay-common-utils.version>0.2.0</biit-liferay-common-utils.version>
-		
+		<surefire.version>2.16</surefire.version>
 	</properties>
 
 	<build>
@@ -29,6 +29,16 @@
 				<configuration>
 					<source>${java.jdk.version}</source>
 					<target>${java.jdk.version}</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>${surefire.version}</version>
+				<configuration>
+					<suiteXmlFiles>
+						<suiteXmlFile>src/test/config/testng.xml</suiteXmlFile>
+					</suiteXmlFiles>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -49,7 +59,12 @@
 			<artifactId>common</artifactId>
 			<version>${biit-liferay-common-utils.version}</version>
 		</dependency>
-		
+		<!-- For password encryption -->
+		<dependency>
+			<groupId>axis</groupId>
+			<artifactId>axis</artifactId>
+			<version>1.4</version>
+		</dependency>
 		<!-- Testing -->
 		<dependency>
 			<groupId>org.testng</groupId>
@@ -64,4 +79,7 @@
 			<version>1.4.7</version>
 		</dependency>
 	</dependencies>
+
 </project>
+
+
