--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>com.biit.liferay</groupId>
 	<artifactId>security-ws-client</artifactId>
 	<packaging>jar</packaging>
-	<version>0.2.0</version>
+	<version>0.2.1</version>
 	<name>Liferay Authentication Client with Web Services</name>
 	<description>Obtain users, groups and roles information from liferay</description>
 
@@ -18,6 +18,7 @@
 		<biit-common-utils.version>0.0.1</biit-common-utils.version>
 		<biit-liferay-common-utils.version>0.2.0</biit-liferay-common-utils.version>
 		<surefire.version>2.16</surefire.version>
+		<PBKDF2-encryption.version>1.0.0</PBKDF2-encryption.version>
 	</properties>
 
 	<build>
@@ -53,6 +54,12 @@
 	</distributionManagement>
 
 	<dependencies>
+		<!-- PBkDF2Encryption -->
+		<dependency>
+			<groupId>com.biit.security</groupId>
+			<artifactId>PBKDF2-encryption</artifactId>
+			<version>${PBKDF2-encryption.version}</version>
+		</dependency>
 		<!-- Basic Liferay Access -->
 		<dependency>
 			<groupId>com.biit.liferay</groupId>
