--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 		<biit-common-utils.version>0.0.1</biit-common-utils.version>
 		<biit-liferay-common-utils.version>0.2.0</biit-liferay-common-utils.version>
 		<surefire.version>2.16</surefire.version>
+		<apache.commons.codec.version>1.9</apache.commons.codec.version>
 		<PBKDF2-encryption.version>1.0.0</PBKDF2-encryption.version>
 		<SHA1-encryption.version>1.0.0</SHA1-encryption.version>
 	</properties>
@@ -81,11 +82,11 @@
 			<version>${org.testng.version}</version>
 			<scope>test</scope>
 		</dependency>
-		<!-- some services use this dependency -->
+		<!-- Apache commons codec -->
 		<dependency>
-			<groupId>javax.mail</groupId>
-			<artifactId>mail</artifactId>
-			<version>1.4.7</version>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>${apache.commons.codec.version}</version>
 		</dependency>
 	</dependencies>
 
