Added missing Spring annotations

--- a/pom.xml
+++ b/pom.xml
@@ -39,8 +39,9 @@
 		<maven-release-plugin.version>2.5.1</maven-release-plugin.version>
 		<maven-scm-provider-gitexe.version>1.9.2</maven-scm-provider-gitexe.version>
 		<project.scm.id>git</project.scm.id>
+		<org.springframework.version>4.1.5.RELEASE</org.springframework.version>
 		<!-- BiiT dependencies -->
-		<biit-liferay-common-utils.version>[0.8,0.9)</biit-liferay-common-utils.version>
+		<liferay-service-common.version>[0.8,0.9)</liferay-service-common.version>
 	</properties>
 
 	<build>
@@ -94,7 +95,7 @@
 		<dependency>
 			<groupId>com.biit.liferay</groupId>
 			<artifactId>liferay-service-common</artifactId>
-			<version>${biit-liferay-common-utils.version}</version>
+			<version>${liferay-service-common.version}</version>
 		</dependency>
 		<!-- Testing -->
 		<dependency>
@@ -107,6 +108,11 @@
 			<groupId>javax.inject</groupId>
 			<artifactId>javax.inject</artifactId>
 			<version>1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>${org.springframework.version}</version>
 		</dependency>
 	</dependencies>
 
