Corrected artifactory url

--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
 	<distributionManagement>
 		<repository>
 			<id>central</id>
-			<name>biit-releases</name>
-			<url>https://git.biit-solutions.com:8443/artifactory/ext-release-local</url>
+			<name>libs-releases</name>
+			<url>https://git.biit-solutions.com:8443/artifactory/libs-release</url>
 		</repository>
 		<snapshotRepository>
 			<id>snapshots</id>
