Corrected liferay server

--- a/src/test/resources/liferay.conf
+++ b/src/test/resources/liferay.conf
@@ -1,8 +1,8 @@
-virtualhost=liferay.biit-solutions.com
-port=9443
+virtualhost=testing.biit-solutions.com
+port=443
 liferayProtocol=https
 user=devel@biit-solutions.com
 password=^KOEySk!fRJ45
 webapp=
 passwordEncriptationAlgorithm=PBKDF2
-webservices=api/jsonws/
+webservices=api/jsonws/proxy_prefix=liferay
