Corrected liferay server

--- a/src/test/resources/liferay.conf
+++ b/src/test/resources/liferay.conf
@@ -1,8 +1,9 @@
 virtualhost=testing.biit-solutions.com
 port=443
-liferayProtocol=https
+Protocol=https
 user=devel@biit-solutions.com
 password=^KOEySk!fRJ45
 webapp=
 passwordEncriptationAlgorithm=PBKDF2
 webservices=api/jsonws/proxy_prefix=liferay
+proxy_prefix=liferay
