Corrected line in config

--- a/src/test/resources/liferay.conf
+++ b/src/test/resources/liferay.conf
@@ -5,5 +5,5 @@ user=devel@biit-solutions.com
 password=^KOEySk!fRJ45
 webapp=
 passwordEncriptationAlgorithm=PBKDF2
-webservices=api/jsonws/proxy_prefix=liferay
+webservices=api/jsonws
 proxy_prefix=liferay
