Corrected liferay server

--- a/src/test/resources/liferay.conf
+++ b/src/test/resources/liferay.conf
@@ -1,6 +1,6 @@
 virtualhost=testing.biit-solutions.com
 port=443
-Protocol=https
+liferayProtocol=https
 user=devel@biit-solutions.com
 password=^KOEySk!fRJ45
 webapp=
