Corrected liferay user

--- a/src/main/resources/liferay.conf
+++ b/src/main/resources/liferay.conf
@@ -1,5 +1,5 @@
-user=test@liferay.com
-password=test
+user=webservices@biit-solutions.com
+password=asd123
 webapp=
 virtualhost=localhost
 port=8080
