Correcting duplicated tag

--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 
 	<scm>
 		<connection>scm:git:git.biit-solutions.com:BiiT/LiferaySecurityClient.git</connection>
-		<connection>scm:git:git.biit-solutions.com:BiiT/LiferaySecurityClient.git</developerConnection>
+		<developerConnection>scm:git:git.biit-solutions.com:BiiT/LiferaySecurityClient.git</developerConnection>
 		<tag>liferay-authentication-client</tag>
 	</scm>
 
