--- a/pom.xml
+++ b/pom.xml
@@ -1,36 +1,53 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.biit.liferay</groupId>
-	<artifactId>liferay-authentication-client</artifactId>
-	<packaging>jar</packaging>
-	<version>1.0.54-SNAPSHOT</version>
-	<name>Liferay Authentication Client with Web Services</name>
-	<description>Obtain users, groups and roles information from liferay</description>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>com.biit-solutions.liferay</groupId>
+    <artifactId>liferay-authentication-client</artifactId>
+    <packaging>jar</packaging>
+    <version>1.0.54-SNAPSHOT</version>
+    <name>Liferay Authentication Client with Web Services</name>
+    <description>Obtain users, groups and roles information from liferay</description>
+    <url>https://github.com/BiiT-Solutions</url>
 
     <parent>
-        <groupId>com.biit</groupId>
+        <groupId>com.biit-solutions</groupId>
         <artifactId>versions</artifactId>
         <version>[1.0,1.1)</version>
-        <relativePath /> <!-- lookup parent from repository -->
+        <relativePath/> <!-- lookup parent from repository -->
     </parent>
+
+
+    <licenses>
+        <license>
+            <name>GNU AGPL v3</name>
+            <url>https://www.gnu.org/licenses/agpl-3.0.html</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
+    <organization>
+        <name>BiiT Sourcing Solutions S.L.</name>
+        <url>https://www.biit-solutions.com/</url>
+    </organization>
 
     <distributionManagement>
         <repository>
             <id>central</id>
-            <name>libs-releases</name>
-            <url>https://artifactory.biit-solutions.com/artifactory/libs-release</url>
+            <name>Maven Central</name>
+            <url>https://repo.maven.apache.org/maven2</url>
         </repository>
         <snapshotRepository>
-            <id>snapshots</id>
-            <name>libs-snapshot</name>
-            <url>https://artifactory.biit-solutions.com/artifactory/libs-snapshot</url>
+            <id>github</id>
+            <name>GitHub Packages</name>
+            <url>https://maven.pkg.github.com/BiiT-Solutions/LiferaySecurityClient</url>
         </snapshotRepository>
     </distributionManagement>
 
     <scm>
-        <connection>scm:git:git.biit-solutions.com:Java/LiferaySecurityClient.git</connection>
-        <developerConnection>scm:git:git.biit-solutions.com:Java/LiferaySecurityClient.git</developerConnection>
+        <connection>scm:git:ssh://git@github.com/BiiT-Solutions/LiferaySecurityClient.git</connection>
+        <developerConnection>scm:git:ssh://git@github.com/BiiT-Solutions/LiferaySecurityClient.git</developerConnection>
+        <url>https://github.com/BiiT-Solutions/LiferaySecurityClient.git</url>
         <tag>liferay-authentication-client</tag>
     </scm>
 
@@ -78,6 +95,30 @@
                     </checkModificationExcludes>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>license-maven-plugin</artifactId>
+                <version>${license-maven-plugin.version}</version>
+                <configuration>
+                    <organizationName>BiiT Sourcing Solutions S.L.</organizationName>
+                    <inceptionYear>2013</inceptionYear>
+                    <licenseName>agpl_v3</licenseName>
+                    <excludes>
+                        <exclude>**/*.properties</exclude>
+                        <exclude>**/*.xml</exclude>
+                        <exclude>**/*.json</exclude>
+                    </excludes>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>first</id>
+                        <goals>
+                            <goal>update-file-header</goal>
+                        </goals>
+                        <phase>package</phase>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
@@ -103,8 +144,9 @@
         </dependency>
         <!-- Basic Liferay Access -->
         <dependency>
-            <groupId>com.biit.liferay</groupId>
+            <groupId>com.biit-solutions.liferay</groupId>
             <artifactId>liferay-service-common</artifactId>
+            <version>${liferay-service-common.version}</version>
         </dependency>
         <!-- Testing -->
         <dependency>
