--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,10 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.biit-solutions.liferay</groupId>
     <artifactId>liferay-authentication-client</artifactId>
     <packaging>jar</packaging>
-    <version>1.0.54-SNAPSHOT</version>
+    <version>1.0.54</version>
     <name>Liferay Authentication Client with Web Services</name>
     <description>Obtain users, groups and roles information from liferay</description>
     <url>https://github.com/BiiT-Solutions</url>
@@ -14,7 +13,7 @@
         <groupId>com.biit-solutions</groupId>
         <artifactId>versions</artifactId>
         <version>[1.0,1.1)</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath /> <!-- lookup parent from repository -->
     </parent>
 
 
@@ -48,7 +47,7 @@
         <connection>scm:git:ssh://git@github.com/BiiT-Solutions/LiferaySecurityClient.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/BiiT-Solutions/LiferaySecurityClient.git</developerConnection>
         <url>https://github.com/BiiT-Solutions/LiferaySecurityClient.git</url>
-        <tag>liferay-authentication-client</tag>
+        <tag>liferay-authentication-client-1.0.54</tag>
     </scm>
 
     <build>
